[package]
name = "filesystem_forklift"
version = "0.1.0"
authors = ["Michelle Zhong <mzhong37@gmail.com>"]
description = "Tool for migrating NFS and CIFS shares"
license = "MIT"
readme = "README.md"
edition = "2018"

[package.metadata.deb]
maintainer = "Michelle Zhong <mzhong37@gmail.com>"
depends = "$auto"
assets = [
    ["config/forklift.json", "etc/forklift/forklift.json", "666"], 
    ["target/release/filesystem_forklift", "usr/sbin/", "755"],
    ["README.md", "usr/share/doc/forklift/README", "644"],
]
conf-files = ["/etc/forklift/forklift.json"]
[workspace]

[dependencies]
api = { path = "api" }
protobuf = "~2"
rendezvous_hash = "0.2.1"
log = "0.4.5"
simplelog = "0.5.2"
clap = "2.32.0"
dirs = "1.0.4"
nng = "0.4.0"
nix = "0.11.0"
libnfs = {git = "https://github.com/cholcombe973/libnfs.git", branch = "mutexthread"}
crossbeam = "0.7.1"
rayon = "1.0.3"
rand = "0.6.5"
chrono = "0.4.6"
rust-smb = {git = "https://github.com/mzhong1/rust-smb.git"}
meowhash = "0.1.2"
digest = "0.8.0"
nom = "4.2.0"
lazy_static = "1.2.0"
serde = "1.0.85"
serde_derive = "1.0.85"
serde_json = "1.0"
pathdiff = "0.1.0"
term_size = "0.3.1"
colored = "1.7.0"
postgres-derive = "0.3.3"
derive-error = "0.0.4"
r2d2 = "0.8.3"
r2d2_postgres = "0.14.0"
[dependencies.postgres]
version = "0.15.2"
features = ["with-chrono"]
